2006-11-20  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix src/kahua/persistence/efs.scm: update index link before execution
	  of write-kahua-instance.

	* Update documents: INSTALL and doc/Setup.ja

	* Change plugins/fileio.scm
	  Now get-original-name return basename of Content-Disposition value.
	  Internet Explorer give full path of uploaded file as Content-Dispotion,
	  so we should strip it.

	* Fix lack of magic comment to specify character coding system
	  of source code.

	* Drop (use kahua.pdf) from kahua module.

	* Now kahua.persistence.fs is obsolete.
	  You should use kahua.persistence.efs instead of it.
	  kahua.persistence.fs is available still, but it'll have gone soon.

	* Add index slot feature to kahua.persistence.efs
	  You define persistent class like:
	  (define-class <index-test> (<kahua-persistent-base>)
	    ((a :init-keyword :a :init-value "a" :allocation :persistent :index :unique)
	     (b :init-keyword :b :init-value "b" :allocation :persistent :index :any)
	     (c :init-keyword :c :init-value "c" :allocation :persistent)))
	  and query like:
	  (make-kahua-collection <index-test> :index '(a . "a1"))
	  or
	  (make-kahua-collection <index-test> :index '(b . "b1"))
	  Now only kahua.persistence.efs has this feature, but
	  kahua.persistence.dbi(so and mysql and postgresql) will have
	  it soon, but kahua.persistence.fs will not.

2006-10-30  Tatsuya BIZENN  <bizenn@arthub.net>

	* Add kahua-dbutil upgrade facility.
	  If you'd like to upgrade from old fsdb to efs db:
	  kahua-dbutil upgrade path-to-db

	* Add kahua-dbutil fix facility.

	* Change MySQL/PostgreSQL table structure.
	  Now kahua_\d+ table have "id" column, and it is primary key of
	  the table.  The column named "keyval" is now nullable column,
	  have unique index, and if the record is "removed", the column
	  is set NULL.

	* Add kahua-instance method.
	  (kahua-instance <a-class> oid)
	  and oid is object ID as integer.
	
2006-10-25  Tatsuya BIZENN  <bizenn@arthub.net>
